--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* profile container */
 .profile-container {
   display: flex;
-  margin: 50px;
+  margin: 20px;
 }
 
 .profile-infoContainer {
@@ -12,7 +12,7 @@
 
 .profile-pic-container {
   display: flex;
-  margin: 10px 10px 20px 100px; 
+  margin: 10px 10px 20px 50px; 
   flex: 0 0 300px;
   justify-content: center;
 }
@@ -35,7 +35,7 @@ button:hover {
 }
 
 .profile-info label {
-  flex: 0 0 150px; 
+  flex: 0 0 100px; 
   font-size: 20px; 
 }
 
@@ -76,9 +76,9 @@ input::file-selector-button:hover {
 }
 
 .profilePic{
-  display: flex;
+  height: 100%;
+  width: 100%;
   border: 2px solid gray; 
   box-sizing: border-box; 
   overflow: hidden; 
-  aspect-ratio: 1/1;
 }
