--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,8 @@
 .profile-container {
   display: flex;
   margin: 20px;
+  border: solid;
+  border-radius: 10px
 }
 
 .profile-infoContainer {
@@ -12,9 +14,11 @@
 
 .profile-pic-container {
   display: flex;
-  margin: 10px 10px 20px 50px; 
+  margin: 10px 10px 10px 50px; 
   flex: 0 0 300px;
   justify-content: center;
+  flex-direction: column;
+
 }
 
 /* style button and input field */
@@ -29,15 +33,14 @@ button:hover {
 /* edit and submit button */
 .edit-submit-container{
   display: flex;
-  margin-right: 30px;
   justify-content:flex-end;
   height: 50px;
   gap:10px;
-
+  margin-top: 10px;
 }
 
 .button.edit{
-  width: 10%;
+  width: 100px;
   height:100%;
   border-radius: 10px;
   border: solid;
@@ -101,9 +104,9 @@ input::file-selector-button:hover {
 }
 
 .profilePic{
-  height: 100%;
-  width: 100%;
+  height: 300px;
+  width: 300px;
   border: 2px solid gray; 
+  border-radius: 10px;
   box-sizing: border-box; 
-  overflow: hidden; 
 }
