--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,8 @@
   display: flex;
   margin: 20px;
   border: solid;
-  border-radius: 10px
+  border-radius: 10px;
+  background-color: #F0F0F0;
 }
 
 .profile-infoContainer {
@@ -71,6 +72,7 @@ button:hover {
   flex: 1; 
   font-size: 16px; 
   padding: 10px; 
+  border-radius: 5px;
 }
 
 input:focus{
@@ -109,4 +111,5 @@ input::file-selector-button:hover {
   border: 2px solid gray; 
   border-radius: 10px;
   box-sizing: border-box; 
+  background-color: white;
 }
