--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,7 @@ button:hover {
   height: 50px;
   gap:10px;
   margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .button.edit.submit{
@@ -45,6 +46,21 @@ button:hover {
   height:100%;
   border-radius: 10px;
   border: solid lightgray;
+}
+
+/* add and remove button */
+.button.add.remove {
+  width: 50px;
+  height:100%;
+  border-radius: 10px;
+  border: solid lightgray;
+}
+.add-remove-container {
+  width: 100%;
+  height: 25px;
+  margin-top: 10px;
+  display: flex;
+  justify-content: flex-end;
 }
 
 /* This is profile info's style */
